new docs for sqlkite

--- a/sqlkite4/navigation.html
+++ b/sqlkite4/navigation.html
@@ -14,8 +14,8 @@
     <div class="sideMenuPart" id="sqlkite-nav-submenu-0-3" pageId="sqlkite::com.frankegan.sqlkite//mapToOneOrDefault/kotlinx.coroutines.flow.Flow[com.frankegan.sqlkite.SqlKite.Query]#TypeParam(bounds=[kotlin.Any?])#kotlin.Function1[android.database.Cursor,TypeParam(bounds=[kotlin.Any?])]/PointingToDeclaration//1366389373">
       <div class="overview"><a href="sqlkite/com.frankegan.sqlkite/map-to-one-or-default.html"><span>map</span><wbr></wbr><span>To</span><wbr></wbr><span>One</span><wbr></wbr><span>Or</span><wbr></wbr><span><span>Default()</span></span></a></div>
     </div>
-    <div class="sideMenuPart" id="sqlkite-nav-submenu-0-4" pageId="sqlkite::com.frankegan.sqlkite//observerQuery/android.content.ContentResolver#android.net.Uri#kotlin.Array[kotlin.String]?#kotlin.String?#kotlin.Array[kotlin.String]?#kotlin.String?#kotlin.Boolean/PointingToDeclaration//1366389373">
-      <div class="overview"><a href="sqlkite/com.frankegan.sqlkite/observer-query.html"><span>observer</span><wbr></wbr><span><span>Query()</span></span></a></div>
+    <div class="sideMenuPart" id="sqlkite-nav-submenu-0-4" pageId="sqlkite::com.frankegan.sqlkite//observeQuery/android.content.ContentResolver#android.net.Uri#kotlin.Array[kotlin.String]?#kotlin.String?#kotlin.Array[kotlin.String]?#kotlin.String?#kotlin.Boolean/PointingToDeclaration//1366389373">
+      <div class="overview"><a href="sqlkite/com.frankegan.sqlkite/observe-query.html"><span>observe</span><wbr></wbr><span><span>Query()</span></span></a></div>
     </div>
     <div class="sideMenuPart" id="sqlkite-nav-submenu-0-5" pageId="sqlkite::com.frankegan.sqlkite/SqlKite///PointingToDeclaration//1366389373">
       <div class="overview"><a href="sqlkite/com.frankegan.sqlkite/-sql-kite/index.html"><span>Sql</span><wbr></wbr><span><span>Kite</span></span></a></div>
